[package]
name = "lemmeknow-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
web-sys = {version="0.3", features=["HtmlInputElement"]}
wasm-bindgen = "0.2.81"
js-sys = "0.3.58"
lemmeknow = { git="https://github.com/swanandx/lemmeknow/", default-features=false }

[profile.release]
lto = true
panic = "abort"